bad/bin_op_eq_void_bool.example_compiler_output
ERROR
[1mbad/bin_op_eq_void_bool.lat:4:8: [1;31merror: [0;1moperator == cannot compare values of types `void` and `boolean` because values are not convertible to either of the two types[m
	foo() == true;
	      [1;32m^[m
